--- a/campus.html
+++ b/campus.html
@@ -18,50 +18,34 @@
    <nav>
     <ul>
       <a href="home.html"><img src="./images/logo.png" style="border-radius:20%;width:30px;height:30px"></a>
-        <li><a class="menu"href="contactUs.html">Contact</a></li>
-        <li><a class="menu"href="download.html">Download</a></li>
-        <li><a class="menu"href="campus.html">Campus</a></li>
-        <li><a class="menu"href="aboutUs.html">About</a></li>
-        <li><a class="menu"href="home.html">Home</a></li>
+      <li><a class="menu"href="home.html">Home</a></li> 
+      <li><a class="menu"href="download.html">Download</a></li>
+      <li><a class="menu"href="campus.html">Campus</a></li>
+      <li><a class="menu"href="aboutUs.html">About</a></li>
+      <li><a class="menu"href="contactUs.html">Contact</a></li> 
      </ul>
   </nav>
   
 
   <div class="hero-image">
   <div class="hero-text">
-    <h1>EXPLORE OUR CAMPUS</h1>
-
-    <p>Where every step leads to a new moment of enchantment. Welcome to our celestial campus.</p>
+    <h1>CAMPUS</h1>
+    <p>Explore our online space where the hospitality community comes together.</p>
   </div>
 </div>
-
-  <div class="container">
-
-    <h2 style="margin-left: 80px;">Swimming Pool Zone:</h2>
-    <ol style="margin-left: 80px;">
-      <li>A serene and tranquil area, perfect for a refreshing dip.</li> 
-      <li>Experience a tropical oasis offering relaxation and fun.</li>
-      <li>Complete with sun loungers and a refreshing poolside bar.</li>
-    </ol>
-    <img src="./images/pool.png" alt="Pool Area" style="width: 100%;">
-
-    <h2 style="margin-left: 80px;">Health and Relaxation Center</h2>
-    <ol style="margin-left: 80px;">
-      <li>A place where guests can unwind and rejuvenate.</li> 
-      <li>Discover a haven of tranquility.</li>
-      <li>Providing rejuvenating treatments and fitness facilities for ultimate relaxation.</li>
-    </ol>
-    <img src="./images/fitness.jpg" alt="Spa & Wellness Center" style="width: 100%;">
-  
-
-    <h2 style="margin-left: 80px;">Dining Area</h2>
-    <ol style="margin-left: 80px;">
-      <li>Culinary delights await in a vibrant space.</li> 
-      <li>Diverse dining options, ranging from gourmet cuisine to casual fare.</li>
-      <li>A delightful experience for a variety of tastes and preferences.</li>
-    </ol>
-    <img src="./images/dining.jpg" alt="Dining Pavilion" style="width: 100%;">
+<div class="campus-container">
+  <div class="virtual-experience">
+    <h2>Virtual Experience</h2>
+    <p>Immerse yourself in a virtual journey that captures the essence of hospitality. From interactive discussions to insightful webinars, our virtual experience offers a dynamic platform for learning and networking.</p>
   </div>
+
+  <div class="virtual-tour">
+    <h2>Take a Virtual Tour</h2>
+    <p>Curious to explore our virtual campus? Take a guided virtual tour to discover the various features and resources available. Click the button below to start your tour!</p>
+    <a href="virtual_tour.html" class="tour-button">Start Virtual Tour</a>
+  </div>
+</div>
+  
               
    </body>
 </html>
