--- a/contactUs.html
+++ b/contactUs.html
@@ -7,81 +7,37 @@
 <body bgcolor="white">
   <nav>
     <ul>
-      <a href="home.html"><img src="./images/logo.png" style="border-radius:20%;width:30px;height:30px"></a>
-        <li><a class="menu"href="contactUs.html">Contact</a></li>
+        <a href="home.html"><img src="./images/logo.png" style="border-radius:20%;width:30px;height:30px"></a>
+        <li><a class="menu"href="home.html">Home</a></li> 
         <li><a class="menu"href="download.html">Download</a></li>
         <li><a class="menu"href="campus.html">Campus</a></li>
         <li><a class="menu"href="aboutUs.html">About</a></li>
-        <li><a class="menu"href="home.html">Home</a></li>
+        <li><a class="menu"href="contactUs.html">Contact</a></li>  
      </ul>
   </nav>
   
 
   <div class="hero-image">
     <div class="hero-text">
-      <h1>CONTACT US 📲</h1>
-      <p>We are here to provide exceptional services. Feel free to reach out to us.</p>
+      <h1>Contact </h1>
+      <p>Feel free to get in touch with us. We'd love to hear from you!</p>
     </div>
   </div>
   
   <div class="container">
-    <h2 style="text-align: center;">Contact Information:</h2>
+    <h2 style="text-align: center ;">Contact Information:</h2>
   
-    <div style="margin-left: 20px ;">
-      <p><strong>Name :</strong> Chandrika Phuyel</p>
-      <p><strong>Address:</strong> Bhutan / Thimphu / Mothithang</p>
-      <p><strong>Phone:</strong> +97577684416</p>
-      <p><strong>Email:</strong> info@celestialevents.com</p>
+    <div style="text-align: center ;">
+      <p><strong>Name :</strong> Indira Bhandari</p>
+      <p><strong>Std ID :</strong> 202224034</p>
+      <p><strong>Address:</strong> Bhutan / Thimphu / Motithang</p>
+      <p><strong>Phone:</strong> +97577744317</p>
+      <p><strong>Email:</strong> info@hospitalityblog.com</p>
     </div>
-
-    <div style="margin-left: 20px;">
-      <p><strong>Reservation Questions:</strong>    reservations@celestialevents.com</p>
-      <p><strong>Employment Opportunities: </strong>employee@celestialevents.com</p>
-      <p><strong>Press Inquiries: </strong> press@celestialevents.com</p>
-    </div>
-
-    <h2 style="text-align: center;">Get in Touch:</h2>
-  
-    <form style="margin-left: 20px;">
-      <!-- You can replace "process_contact_form.php" with the actual path to your server-side script for processing the form -->
-      <label for="name">Name:</label>
-      <input type="text"  placeholder="Your Name" required>
-      <br>
-      <br>
-      <label for="email">Email:</label>
-      <input  placeholder="Your Email" required>
-      <br>
-      <br>
-      <label for="message">Message:</label>
-      <textarea></textarea>
-      <br>
-      <br>
-      <button >Submit</button>
-    </form>
-  </div>
-  
-          
+  </div>         
 
 <style> 
-/* .hero-image {
-    background-image: url('./images/contact.jpeg');
-    height: 800px;
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  } */
-  
+
 
 </style>
 
