--- a/download.html
+++ b/download.html
@@ -8,36 +8,27 @@
    <nav>
     <ul>
       <a href="home.html"><img src="./images/logo.png" style="border-radius:20%;width:30px;height:30px"></a>
-        <li><a class="menu"href="contactUs.html">Contact</a></li>
-        <li><a class="menu"href="download.html">Download</a></li>
-        <li><a class="menu"href="campus.html">Campus</a></li>
-        <li><a class="menu"href="aboutUs.html">About</a></li>
-        <li><a class="menu"href="home.html">Home</a></li>
+      <li><a class="menu"href="home.html">Home</a></li> 
+      <li><a class="menu"href="download.html">Download</a></li>
+      <li><a class="menu"href="campus.html">Campus</a></li>
+      <li><a class="menu"href="aboutUs.html">About</a></li>
+      <li><a class="menu"href="contactUs.html">Contact</a></li> 
      </ul>
   </nav>
 
   <div class="hero-image">
     <div class="hero-text">
-      <h1>DOWNLOAD OUR RESOURCES</h1>
-      <p>Explore and download useful resources related to Celestial Events.</p>
-      <p>Enhance your event planning experience with our guides, checklists, and more.</p>
+      <h1>Download</h1>
+      <p>Explore and download useful resources to enhance your knowledge and skills in the field of hospitality.</p>
     </div> 
 </div>
 
 
   <div class="container">
     <h2>Available Downloads:</h2>
-   
-    <ul>
-      <li ><a href="download/guide.pdf"  download style="color:black;"><button>Event  Guide⏬</button></a></li>
-      <li ><a href="download/checklist.docx" download style="color:black"><button>Event Checklist⏬</button></a></li>
-   
-    </ul>
-
-    <h1>Go to video link by clicking image below</h1>
-    <a href="https://www.youtube.com/shorts/PldJqpk8YlM" target="_blank">
-      <img src="./images/you.png" style="border-radius:2"/>
-  
+    <p>click on the image to go to my video link</p> 
+    <a href="https://www.youtube.com/watch?v=O8EaDRfZd-c"><img src="./images/youtube.jpg" height="400px" width="600px"></a>
+    
   </div>             
    </body>
 </html>
