--- a/contactUs.html
+++ b/contactUs.html
@@ -32,7 +32,7 @@
       <p><strong>Std ID :</strong> 202224034</p>
       <p><strong>Address:</strong> Bhutan / Thimphu / Motithang</p>
       <p><strong>Phone:</strong> +97577744317</p>
-      <p><strong>Email:</strong> info@hospitalityblog.com</p>
+      <p><strong>Email:</strong> esshasharma56@gmail.com</p>
     </div>
   </div>         
 
